# modules

./: README.md
examples/: CMakeLists.txt  README.md  build.sh
examples/cmake/: FooConfig.cmake.in
examples/config/: foo.module.in  foo.pc.in
examples/foo/include/: foo.h
examples/foo/lib64/: libfoo.so.1.2.3
examples/foo/lib64/cmake/Foo/: FooTargets-release.cmake  FooTargets.cmake
examples/foo/lib64/pkgconfig/: foo.pc
examples/foo/share/modulefiles/foo/: 1.2.3
examples/lib/: foo.c
examples/src/: hello.c
